<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metal"
    android:dither="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:tileMode="repeat"
    android:visibility="visible"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:contentDescription="@string/Helper"
        android:orientation="horizontal"
        android:visibility="visible" >

        <ImageButton
            android:id="@+id/Button1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:alpha="1"
            android:background="@layout/mybutton"
            android:maxHeight="80dp"
            android:maxWidth="80dp"
            android:onClick="ButtonOnClick"
            android:scaleType="centerInside"
            android:src="@drawable/lights"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/Button2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="8dp"
            android:alpha="1"
            android:background="@layout/mybutton"
            android:maxHeight="80dp"
            android:maxWidth="80dp"
            android:onClick="ButtonOnClick"
            android:scaleType="centerInside"
            android:src="@drawable/blinds"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/Button3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="8dp"
            android:alpha="1"
            android:background="@layout/mybutton"
            android:maxHeight="90dp"
            android:maxWidth="90dp"
            android:onClick="ButtonOnClick"
            android:scaleType="centerInside"
            android:src="@drawable/themperature"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:dividerPadding="@dimen/activity_horizontal_margin"
        android:visibility="visible" >

        <ImageButton
            android:id="@+id/ImageButton05"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:alpha="1"
            android:background="@layout/mybutton"
            android:maxHeight="70dp"
            android:maxWidth="70dp"
            android:onClick="ButtonOnClick"
            android:scaleType="centerInside"
            android:src="@drawable/door"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/www"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:alpha="1"
            android:background="@layout/mybutton"
            android:maxHeight="70dp"
            android:maxWidth="70dp"
            android:onClick="ButtonOnClick"
            android:scaleType="centerInside"
            android:src="@drawable/fan"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/Button6"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:alpha="1"
            android:background="@drawable/button"
            android:maxHeight="70dp"
            android:maxWidth="70dp"
            android:onClick="ButtonOnClick"
            android:scaleType="centerInside"
            android:src="@drawable/www"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="0.23"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/button_all_home"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@layout/mybutton"
            android:contentDescription="@string/LaunchObjectView"
            android:drawablePadding="-15sp"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:onClick="ButtonOnClick"
            android:scaleType="centerInside"
            android:src="@drawable/home"
            android:text="this is text"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="141dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:adjustViewBounds="true"
            android:alpha="0.5"
            android:contentDescription="@string/AplicationLogo"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textlicz"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.62"
                android:contentDescription="@string/LaunchObjectView"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/mikrophone_tlo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:src="@drawable/microphone_tlo" />

                <ImageView
                    android:id="@+id/microphone"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:src="@drawable/microphone" />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>